# lfs_bundle

./: .gitignore  Cargo.toml
docs/superpowers/plans/: 2026-03-25-gui-chinese-picker-commit-tree.md  2026-03-25-lfs-bundle-gui.md
docs/superpowers/specs/: 2026-03-25-gui-chinese-picker-commit-tree-design.md  2026-03-25-lfs-bundle-gui-design.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/core/: archive.rs  events.rs  import.rs  lfs.rs  manifest.rs  mod.rs  models.rs  pack.rs  process.rs  repo.rs  temp.rs  transaction.rs
src/gui/: app.rs  i18n.rs  mod.rs  picker.rs  theme.rs
src/gui/views/: history.rs  import.rs  mod.rs  pack.rs  settings.rs
tests/: cli_smoke.rs  gui_state.rs  i18n.rs  import_transaction.rs  manifest_roundtrip.rs  pack_flow.rs  parse_lfs.rs  repo_commit_tree.rs
