[package]
name = "lfs_bundle"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
eframe = "0.33"
egui = "0.33"
flate2 = "1.1.9"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4.44"
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
